[package]
name = "greek-writer"
version = "0.1.0"
authors = ["jsMRSoL <si_pitt@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
csv = "1.1.3"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
